WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
271146
[LBSE] Fix performance of nested masks
https://bugs.webkit.org/show_bug.cgi?id=271146
Summary
[LBSE] Fix performance of nested masks
Rob Buis
Reported
2024-03-18 02:36:51 PDT
Fix performance of nested masks.
Attachments
Add attachment
proposed patch, testcase, etc.
Rob Buis
Comment 1
2024-03-18 03:43:07 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/26035
Radar WebKit Bug Importer
Comment 2
2024-03-25 02:37:12 PDT
<
rdar://problem/125343293
>
EWS
Comment 3
2024-04-10 01:39:53 PDT
Committed
277292@main
(466a4e163671): <
https://commits.webkit.org/277292@main
> Reviewed commits have been landed. Closing PR #26035 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug