Source/WebCore/rendering/svg/RenderSVGResourceMasker.cpp
@@ -118,32 +118,38 @@ void RenderSVGResourceMasker::applyMask(PaintInfo& paintInfo, const RenderLayerM
         drawColorSpace = DestinationColorSpace::LinearSRGB();
     }
 
-    // FIXME: try to use GraphicsContext::createScaledImageBuffer instead.
-    auto maskImage = createImageBuffer(repaintBoundingBox, absoluteTransform, maskColorSpace, &context);
-    if (!maskImage)
-        return;
+    RefPtr<ImageBuffer> maskImage = m_masker.get(targetRenderer);
+    bool missingMaskerData = !maskImage;
+    if (missingMaskerData) {
+        // FIXME: try to use GraphicsContext::createScaledImageBuffer instead.
+        maskImage = createImageBuffer(repaintBoundingBox, absoluteTransform, maskColorSpace, &context);
+        if (!maskImage)
+            return;
+    }
 
     context.setCompositeOperation(CompositeOperator::DestinationIn);
     context.beginTransparencyLayer(1);
 
-    layer()->paintSVGResourceLayer(maskImage->context(), contentTransform);
+    if (missingMaskerData) {
+        layer()->paintSVGResourceLayer(maskImage->context(), contentTransform);
 
 #if !USE(CG)
-    maskImage->transformToColorSpace(drawColorSpace);
+        maskImage->transformToColorSpace(drawColorSpace);
 #else
-    UNUSED_PARAM(drawColorSpace);
+        UNUSED_PARAM(drawColorSpace);
 #endif
 
-    if (svgStyle->maskType() == MaskType::Luminance)
-        maskImage->convertToLuminanceMask();
-
+        if (svgStyle->maskType() == MaskType::Luminance)
+            maskImage->convertToLuminanceMask();
+        m_masker.set(targetRenderer, maskImage);
+    }
     context.setCompositeOperation(CompositeOperator::SourceOver);
 
     // The mask image has been created in the absolute coordinate space, as the image should not be scaled.
     // So the actual masking process has to be done in the absolute coordinate space as well.
     FloatRect absoluteTargetRect = enclosingIntRect(absoluteTransform.mapRect(repaintBoundingBox));
     context.concatCTM(absoluteTransform.inverse().value_or(AffineTransform()));
-    context.drawConsumingImageBuffer(WTFMove(maskImage), absoluteTargetRect);
+    context.drawImageBuffer(*maskImage, absoluteTargetRect);
     context.endTransparencyLayer();
 }
 
@@ -172,6 +178,12 @@ FloatRect RenderSVGResourceMasker::resourceBoundingBox(const RenderObject& objec
     if (maskRect.isEmpty())
         return targetBoundingBox;
     return maskRect;
+}
+
+void RenderSVGResourceMasker::removeReferencingCSSClient(const RenderElement& client)
+{
+    if (auto renderer = dynamicDowncast<RenderLayerModelObject>(client))
+        m_masker.remove(renderer);
 }
 
 }
